# rchar

./: AUTHORS  Cargo.toml  DEMO  README  TODO  randascii  randstr.py  rchar.py  setup.py
src/: main.rs  randascii  rchar
tests/: test_rchar.py
