[package]
name = "rchar"
version = "1.4.0"
authors = ["a_out_10_2 <moe.andrew@gmail.com>"]
edition = "2018"
default-run = "rchar"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rchar"
path = "src/main.rs"

[[bin]]
name = "sandbox"
path = "src/sandbox.rs"

[dependencies]
argparse = "0.2.2"
rand = "0.7.3"
rand_regex = "0.14.2"
regex-syntax = "0.6.18"